--- a/models/pixy2_cmucam5/model.config
+++ b/models/pixy2_cmucam5/model.config
@@ -4,8 +4,8 @@
   <version>1.0</version>
   <sdf version="1.5">pixy2_cmucam5.sdf</sdf>
   <author>
-    <name>Benjamin Perseghetti</name>
-    <email>bperseghetti@rudislabs.com</email>
+    <name>hewhoshallnotbenamed</name>
+    <email>hewsnbn@gmail.com</email>
   </author>
-  <description>A model of the Pixy2 CMUcam5.</description>
+  <description>A model of the Pixy2 CMUcam5.(Original author Benjamin Perseghetti bperseghetti@rudislabs.com)</description>
 </model>
